--- a/src/FsgXmk.Extensions.DependencyInjection/FsgXmk.Extensions.DependencyInjection.csproj
+++ b/src/FsgXmk.Extensions.DependencyInjection/FsgXmk.Extensions.DependencyInjection.csproj
@@ -2,6 +2,11 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Authors>AnthoChamb</Authors>
+    <Copyright>Copyright (c) 2023 Anthony Chamberland</Copyright>
+    <RepositoryUrl>https://github.com/AnthoChamb/FsgXmk</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
 
   <ItemGroup>
