--- a/src/FsgXmk.Kaitai.Extensions.DependencyInjection/FsgXmk.Kaitai.Extensions.DependencyInjection.csproj
+++ b/src/FsgXmk.Kaitai.Extensions.DependencyInjection/FsgXmk.Kaitai.Extensions.DependencyInjection.csproj
@@ -1,7 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Authors>AnthoChamb</Authors>
+    <Copyright>Copyright (c) 2023 Anthony Chamberland</Copyright>
+    <RepositoryUrl>https://github.com/AnthoChamb/FsgXmk</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
 
   <ItemGroup>
