Rename IFsgXmk interfaces and Kaitai classes

--- a/src/FsgXmk.Kaitai/FsgXmk.Kaitai.csproj
+++ b/src/FsgXmk.Kaitai/FsgXmk.Kaitai.csproj
@@ -18,9 +18,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Update="FsgXmk.cs">
+    <Compile Update="Xmk.cs">
       <AutoGen>True</AutoGen>
-      <DependentUpon>fsg_xmk.ksy</DependentUpon>
+      <DependentUpon>xmk.ksy</DependentUpon>
     </Compile>
   </ItemGroup>
 
