--- a/.editorconfig
+++ b/.editorconfig
@@ -70,7 +70,7 @@ dotnet_style_require_accessibility_modifiers = for_non_interface_members:suggest
 #Style - Modifier preferences
 
 #when this rule is set to a list of modifiers, prefer the specified ordering.
-csharp_preferred_modifier_order = public,private,static:suggestion
+csharp_preferred_modifier_order = public,private,protected,internal,static:suggestion
 
 #Style - qualification options
 
