Add net8 target framework to FsgXmk

--- a/src/FsgXmk/FsgXmk.csproj
+++ b/src/FsgXmk/FsgXmk.csproj
@@ -1,15 +1,18 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFrameworks>netstandard2.0;net8</TargetFrameworks>
   </PropertyGroup>
 
-  <ItemGroup>
+  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
     <PackageReference Include="CommunityToolkit.Diagnostics" Version="8.3.2" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\FsgXmk.Abstractions\FsgXmk.Abstractions.csproj" />
+  </ItemGroup>
+
+  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
     <ProjectReference Include="..\FsgXmk.Buffers\FsgXmk.Buffers.csproj" />
     <ProjectReference Include="..\FsgXmk.IO\FsgXmk.IO.csproj" />
   </ItemGroup>
