--- a/.editorconfig
+++ b/.editorconfig
@@ -80,3 +80,7 @@ dotnet_style_qualification_for_field = false:suggestion
 dotnet_style_qualification_for_method = false:suggestion
 #prefer properties not to be prefaced with this. or Me. in Visual Basic
 dotnet_style_qualification_for_property = false:suggestion
+
+[*.csproj]
+indent_style = space
+indent_size = 2
