Use ValueTask to reduce memory allocations

--- a/src/FsgXmk.Kaitai.Extensions.DependencyInjection/FsgXmk.Kaitai.Extensions.DependencyInjection.csproj
+++ b/src/FsgXmk.Kaitai.Extensions.DependencyInjection/FsgXmk.Kaitai.Extensions.DependencyInjection.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFrameworks>netstandard2.0;net8</TargetFrameworks>
     <Authors>AnthoChamb</Authors>
     <Copyright>Copyright (c) 2023 Anthony Chamberland</Copyright>
     <RepositoryUrl>https://github.com/AnthoChamb/FsgXmk</RepositoryUrl>
@@ -9,8 +9,12 @@
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
 
-  <ItemGroup>
+  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup Condition="'$(TargetFramework)' == 'net8'">
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.2" />
   </ItemGroup>
 
   <ItemGroup>
