--- a/src/FsgXmk.Abstractions/FsgXmk.Abstractions.csproj
+++ b/src/FsgXmk.Abstractions/FsgXmk.Abstractions.csproj
@@ -1,12 +1,16 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFrameworks>netstandard2.0;net8</TargetFrameworks>
     <Authors>AnthoChamb</Authors>
     <Copyright>Copyright (c) 2023 Anthony Chamberland</Copyright>
     <RepositoryUrl>https://github.com/AnthoChamb/FsgXmk</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
+
+  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
+    <PackageReference Include="System.Threading.Tasks.Extensions" Version="4.6.0" />
+  </ItemGroup>
 
 </Project>
