--- a/benchmarks/FsgXmk.Benchmarks/FsgXmk.Benchmarks.csproj
+++ b/benchmarks/FsgXmk.Benchmarks/FsgXmk.Benchmarks.csproj
@@ -9,6 +9,8 @@
     <Nullable>enable</Nullable>
     <PublishAot>true</PublishAot>
     <Optimize>true</Optimize>
+    
+    <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
